[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
poise = "0.5.5"
strum = "0.24.1"
strum_macros = "0.24.3"
fuzzywuzzy = "0.0.2"
thiserror = "1.0.50"